# Mpage_Agent

./: .gitignore
A2UI/samples/: jsonDemo.ts
agent_service/: .env.example  .gitignore  README.md  pyproject.toml
agent_service/app/: config.py  db.py  errors.py  main.py
agent_service/app/api/: deps.py
agent_service/app/api/routes/: __init__.py  health.py  pages.py
agent_service/app/catalog/: __init__.py  integrity.py  page_schema.json
agent_service/app/models/: page.py
agent_service/app/schemas/: generate.py
agent_service/app/services/: call_log.py  generator.py  llm_gateway.py  manifest.py  page_locks.py  page_store.py  prompt_builder.py
agent_service/app/services/prompts/: system_prompt.md
agent_service/eval/: README.md  cases.json  results.csv  run_eval.py  scorer.py
agent_service/tests/: conftest.py
agent_service/tests/fixtures/: appendix_a_page.json
agent_service/tests/unit/: test_app_boots.py  test_call_log.py  test_check_integrity.py  test_eval_scorer.py  test_generate_api.py  test_generator.py  test_llm_gateway.py  test_manifest.py  test_page_locks.py  test_page_schema.py  test_page_store.py  test_prompt_builder.py
docs/: agent-api-integration.md  agent-service-onboarding.md  ai-page-builder-agent.md  development-iteration-plan.md  phase1-kickoff-decisions.md  tech-spec-phase1-agent.md  tech-spec-phase1-frontend-render.md
smoke_test/: README.md  cases.json  results.csv  run_smoke.py  smoke_check.py  system_prompt.md
smoke_test/outputs/: qwen-plus__case1_basic__1.txt  qwen-plus__case1_basic__2.txt  qwen-plus__case1_basic__3.txt  (+11 more)
(+10 files in other folders)
